--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     var id = gtVid('v');
     if (id) {
         var yt = '<iframe width="99" height="99" src="//www.youtube.com/embed/' + id + '" frameborder="0" allowfullscreen></iframe>';
-        $('#mt').append(yt);
+        $('#mt').html(yt);
     }
     </script>
 </body>
