--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 <body>
     <p id="hdr">mytube | 
     <a href="//github.com/getsetbro/mytube">github</a> | 
-    bookmarklet: <a href="javascript:void(location.href='//getsetbro.com/mytube/index.html#'+location.href)">mytube</a>
+    bookmarklet: <a href="javascript:void(location.href='//getsetbro.com/mytube/%23'+location.href)">mytube</a>
     </p>
     <div id="mt">
       <h1>mytube</h1>
