--- a/index.html
+++ b/index.html
@@ -13,11 +13,12 @@
         margin:0;
     }
     body {
+        background-color: #333;
         box-sizing:border-box;
         padding:1px 15px 15px;
-        background-color: #444;
         font-family: sans-serif;
         text-align: center;
+        text-shadow: 0 1px 0 #000;
     }
     body, a {
         color: #999;
@@ -38,9 +39,10 @@
     </p>
     <div id="mt">
       <h1>mytube</h1>
-      <p>my settings</p>
+      <p>mytube is a page that just plays the video you want to see <br/> at the width and height that you set your brower.</p>
+      <a href="//getsetbro.com/mytube/#http://www.youtube.com/watch?v=4oiLfTnrC40">Exampple</a>
     </div>
-    <script src="http://code.jquery.com/jquery-latest.min.js"></script>
+    <script src="//code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript">
     var gtVid;
 
