--- a/index.html
+++ b/index.html
@@ -33,14 +33,15 @@
 </head>
 
 <body>
-    <p id="hdr">mytube | 
+    <p id="hdr"><a href="//getsetbro.com/mytube">mytube</a> | 
     <a href="//github.com/getsetbro/mytube">github</a> | 
     bookmarklet: <a href="javascript:void(location.href='//getsetbro.com/mytube/%23'+location.href)">mytube</a>
     </p>
     <div id="mt">
       <h1>mytube</h1>
       <p>mytube is a page that just plays the video you want to see <br/> at the width and height that you set your brower.</p>
-      <a href="//getsetbro.com/mytube/#http://www.youtube.com/watch?v=4oiLfTnrC40">Exampple</a>
+      <p>You can paste </p>
+      <a href="//getsetbro.com/mytube/#http://www.youtube.com/watch?v=4oiLfTnrC40">Example</a>
     </div>
     <script src="//code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript">
