--- a/index.html
+++ b/index.html
@@ -45,11 +45,11 @@
     </div>
     <script src="//code.jquery.com/jquery-latest.min.js"></script>
     <script type="text/javascript">
-    var gtVid;
+    var gtVid, wlh = window.location.hash;
 
     gtVid = function(vid) {
         var i, pr, qry, vrs;
-        qry = window.location.hash.split('?')[1];
+        qry = wlh.split('?')[1];
         vrs = qry.split("&");
         i = 0;
         while (i < vrs.length) {
@@ -61,11 +61,9 @@
         }
         return false;
     };
-
-    var id = gtVid('v');
-    if (id) {
-        var yt = '<iframe width="99" height="99" src="//www.youtube.com/embed/' + id + '" frameborder="0" allowfullscreen></iframe>';
-        $('#mt').html(yt);
+    if(wlh){
+      var yt = '<iframe width="99" height="99" src="//www.youtube.com/embed/' + gtVid('v') + '" frameborder="0" allowfullscreen></iframe>';
+      $('#mt').html(yt);
     }
     </script>
 </body>
