--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset='utf-8' />
-    <meta http-equiv="X-UA-Compatible" content="chrome=1" />
+    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
     <meta name="description" content="mytube : youtube my way" />
     <title>mytube</title>
     <style type="text/css">
@@ -36,7 +36,7 @@
 <body>
     <p id="hdr"><a href="//getsetbro.com/mytube">mytube</a> | 
     <a href="//github.com/getsetbro/mytube">github</a> | 
-    bookmarklet: <a href="javascript:void(location.href='//getsetbro.com/mytube/'+location.search)">mytube</a>
+    bookmarklet: <a href="javascript:void(location.href='http://getsetbro.com/mytube/'+location.search)">mytube</a>
     </p>
     <div id="mt">
       <h1>mytube</h1>
