--- a/index.html
+++ b/index.html
@@ -34,19 +34,19 @@
 </head>
 
 <body>
-    <p id="hdr"><a href="//getsetbro.com/mytube">mytube</a> | 
+    <p id="hdr"><a href="//mytube.getsetbro.com/">mytube</a> | 
     <a href="//github.com/getsetbro/mytube">github</a> | 
-    bookmarklet: <a href="javascript:void(location.href='http://getsetbro.com/mytube/'+location.search)">mytube</a>
+    bookmarklet: <a href="javascript:void(location.href='//mytube.getsetbro.com/'+location.search)">mytube</a>
     </p>
     <div id="mt">
       <h1>mytube</h1>
       <p>mytube is a page that just plays the video you want to see <br/> at the width and height that you set your brower.</p>
-      <a href="//getsetbro.com/mytube/?v=4oiLfTnrC40">Example</a>
+      <a href="//mytube.getsetbro.com/?v=4oiLfTnrC40">Example</a>
       <p>Or you can paste the url to the youtube video at the end of this pages url and go.</p>
       Such as:
-      <p>http://getsetbro.com/mytube/?v=4oiLfTnrC40</p>
+      <p>https://mytube.getsetbro.com/?v=4oiLfTnrC40</p>
     </div>
-    <script src="http://code.jquery.com/jquery-1.11.0.min.js"></script>
+    <script src="https://code.jquery.com/jquery-1.12.4.min.js" integrity="sha256-ZosEbRLbNQzLpnKIkEdrPv7lOy9C27hHQ+Xp8a4MxAQ=" crossorigin="anonymous"></script>
     <script type="text/javascript">
     var gtVid, wls = window.location.search.substring(1), gotVid;
 
